# swagger-marshmallow-codegen

./: .gitignore  .travis.yml  CHANGES.txt  LICENSE  Makefile  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
examples/: gen.mk
examples/00simple/: Makefile  legacy_person.py  main.py  person.py  person.yaml
examples/01ref/: Makefile  main.py  person.py
examples/02default/: Makefile  definition.py  definition.yaml  main.py
examples/02uber/: main.py
examples/03additionals/: Makefile  legacy_score.py  main.py  score.py  score.yaml
examples/03github/: Makefile  github.yaml  githubschema.py  main.py
examples/03uber/: Makefile  main.py  uberschema.py
examples/04github/: Makefile  githubschema.py  main.py
examples/04primitives/: Makefile  legacy_schema.py  main.py  schema.py  swagger.yaml
examples/05custom/: Makefile  _custom.py  main.py  myschema.py  person.py  person.yaml
examples/05uber/: main.py  uberschema.py
examples/06apiary/: 00schema.py  Makefile
examples/06github/: Makefile  githubschema.py  main.py
examples/07apiary/: 00schema.py  01schema.yaml
examples/07custom/: main.py  person.py
examples/08apiary/: 00schema.py  00schema.yaml  01schema.py  Makefile
shapes/: Makefile  README.md  codegen_candidates.py  gen-candidates.py  gen.py  requirements.txt  test_schema.py  try.py
swagger_marshmallow_codegen/: __init__.py  __main__.py  accessor.py  cmd.py  codegen.py  constants.py  dispatcher.py  driver.py  evil.py  fields.py  langhelpers.py  lifting.py  loading.py  resolver.py  schema.py  validate.py
(+231 files in other folders)
