[metadata]
name = swagger-marshmallow-codegen
version = "attr: swagger_marshmallow_codegen._version.__version__"

summary = "generating marshmallow's schema from swagger definition file"
long_description = file:README.md
long_description_content_type = text/markdown

url = https://github.com/podhmo/swagger-marshmallow-codegen
author = podhmo
author_email = ababjam61+github@gmail.com

[options]
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    swagger-marshmallow-codegen = swagger_marshmallow_codegen.cmd:main

[bdist_wheel]
universal=0
